<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#414141"
    android:orientation="vertical"
    tools:context=".ui.DetailsFragment">

    <RelativeLayout
        android:id="@+id/progressBar1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvEmployeeNameDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/employee_s_name"
        android:padding="16dp"
        android:textColor="#FFEB3B"
        android:textColorHint="#98A519"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivEmployeePictureDetails"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/image"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/EmployeeIdDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/id_2"
            android:padding="12dp"
            android:textColor="#8BC34A"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEmployeeIdDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/employee_s_id"
            android:padding="12dp"
            android:textColor="#FFEB3B"
            android:textColorHint="#98A519"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/EmployeeOccupationDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/occupation_2"
            android:padding="12dp"
            android:textColor="#8BC34A"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvOccupationDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/employee_s_occupation"
            android:padding="12dp"
            android:textColor="#FFC107"
            android:textColorHint="#98A519"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/SalaryDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/salary_2"
            android:padding="12dp"
            android:textColor="#8BC34A"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSalaryDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/employee_s_salary"
            android:padding="12dp"
            android:textColor="#FFEB3B"
            android:textColorHint="#98A519"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/YearOfHireDetails"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/year_of_hire"
            android:padding="12dp"
            android:textColor="#8BC34A"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvYearOfHireDetails"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/year_of_hire"
            android:padding="12dp"
            android:textColor="#FFEB3B"
            android:textColorHint="#98A519"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdateEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:alpha="0.80"
            android:background="@drawable/button_bg"
            android:text="@string/update_employee_info"
            android:textColor="#FFEB3B" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDeleteEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:alpha="0.80"
            android:background="@drawable/button_bg"
            android:text="@string/delete_employee"
            android:textColor="#FFEB3B" />


    </LinearLayout>


</LinearLayout>